--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/sblaurock/crypticker#readme",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "async": "^2.4.1",
     "colors": "^1.1.2",
     "left-pad": "^1.1.3",
     "lodash": "^4.17.4",
